src/assets/styles/main.scss
@import "variables";
@import "buttons";
@import "form";
@import "tiles";
@import "filter";
@import "chips";

@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");

* {
  box-sizing: border-box;
}

// html {
//   margin-left: calc(100vw - 100%);
//   &::-webkit-scrollbar {
//     width: 10px;
//     background-color: white;
//   }
//   &::-webkit-scrollbar-thumb {
//     background-color: black;
//   }
// }

body {
  background: $base-color;
  margin: 0;
}
.loading {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  background: rgba(0, 0, 0, 0.2);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
#app {
  font-family: "Raleway", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: left;
  color: #2c3e50;
}

header {
  position: fixed;
  z-index: 2;
  // width: 100vw;
  top: 0;
  left: 0;
  right: 0;
  height: 85px;
  background-color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);

  .current-page {
    display: none;
    font-size: 12px;
  }

  @media only screen and (max-width: $breakpoint-small) {
    .greeting {
      h1 {
        font-size: 16px;
      }
    }
    .current-page {
      display: block;
      text-align: center;
    }

    .today {
      font-size: 12px;
      h2 {
        font-size: 16px;
      }
    }
  }
  #nav {
    flex: 1;

    a {
      margin-right: 10px;
      display: inline-block;
      border-radius: 4px;
      padding: 8px;
      color: black;
      text-decoration: none;
      position: relative;

      &:before {
        content: "";
        position: absolute;
        bottom: -2px;
        left: 0;
        display: block;
        background: black;
        width: 0;
        height: 2px;
        transition: width 0.4s ease-in-out;
      }

      &.router-link-active {
        font-weight: 600;

        &:before {
          width: 100%;
        }
      }
    }
    @media only screen and (max-width: $breakpoint-small) {
      transform: translateX(-$breakpoint-small);
      position: fixed;
      z-index: 1;
      background: lighten($base-color, 10);
      top: 85px;
      transition: transform 0.3s ease-out;
      width: 100%;
      padding: 10px;
      display: flex;
      justify-content: space-between;
      align-items: center;

      a {
        font-size: 14px;
        padding: 2px 8px;

        &.router-link-active {
          font-size: 16px;
          font-weight: 600;

          &:before {
            display: none;
          }
        }
      }

      &.active {
        transform: translateX(-10px);
      }

      a:last-child {
        margin-right: 0;
      }
    }
  }
  .greeting {
    flex: 1;

    h1 {
      text-align: center;
      margin: 0;
    }
  }

  .today {
    flex: 1;
    text-align: right;
    h2 {
      margin: 0;
    }
  }
  #nav-mobile {
    display: none;

    @media only screen and (max-width: $breakpoint-small) {
      margin-left: -15px;
      flex: 1;
      display: block;
    }
  }
}
.main {
  margin-top: 85px;
  // margin-bottom: 52px;
  // margin-left: auto;
  // margin-right: auto;
  // width: 100%;
  // max-width: calc(100vw - 20px);
}

.mobile-nav-open {
  .tile-list {
    transform: translateY(247px);
  }
}
.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.6s;
}
.fade-enter,
.fade-leave-to {
  opacity: 0;
}
footer {
  // position: fixed;
  // width: 100vw;
  // bottom: 0;
  // left: 0;
  // right: 0;
  font-size: 12px;
  display: flex;
  align-items: center;
  background: darken($base-color, 60);
  color: white;
  padding: 10px;

  .contact-me {
    @media only screen and (max-width: $breakpoint-small) {
      max-width: 96px;
    }
  }

  .kofi-btn-container {
    margin-left: auto;
    min-width: 0 !important;

    a.kofi-button {
      background: darken($base-color, 20) !important;
      padding: 0 8px !important;
      font-size: 12px !important;
    }
  }
}

.hamburger {
  padding: $hamburger-padding-y $hamburger-padding-x;
  display: inline-block;
  cursor: pointer;

  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;

  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 8px 0 0 0;
  overflow: visible;

  &:hover {
    @if $hamburger-hover-use-filter == true {
      filter: $hamburger-hover-filter;
    } @else {
      opacity: $hamburger-hover-opacity;
    }
  }

  &.is-active {
    &:hover {
      @if $hamburger-hover-use-filter == true {
        filter: $hamburger-active-hover-filter;
      } @else {
        opacity: $hamburger-active-hover-opacity;
      }
    }

    .hamburger-inner,
    .hamburger-inner::before,
    .hamburger-inner::after {
      background-color: $hamburger-active-layer-color;
    }
  }
}

.hamburger-box {
  width: $hamburger-layer-width;
  height: $hamburger-layer-height * 3 + $hamburger-layer-spacing * 2;
  display: inline-block;
  position: relative;
}

.hamburger-inner {
  display: block;
  top: 50%;
  margin-top: $hamburger-layer-height / -2;

  &,
  &::before,
  &::after {
    width: $hamburger-layer-width;
    height: $hamburger-layer-height;
    background-color: $hamburger-layer-color;
    border-radius: $hamburger-layer-border-radius;
    position: absolute;
    transition-property: transform;
    transition-duration: 0.15s;
    transition-timing-function: ease;
  }

  &::before,
  &::after {
    content: "";
    display: block;
  }

  &::before {
    top: ($hamburger-layer-spacing + $hamburger-layer-height) * -1;
  }

  &::after {
    bottom: ($hamburger-layer-spacing + $hamburger-layer-height) * -1;
  }
}

.hamburger--emphatic {
  overflow: hidden;

  .hamburger-inner {
    transition: background-color 0.125s 0.175s ease-in;

    &::before {
      left: 0;
      transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
        top 0.05s 0.125s linear, left 0.125s 0.175s ease-in;
    }

    &::after {
      top: ($hamburger-layer-height) + ($hamburger-layer-spacing);
      right: 0;
      transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
        top 0.05s 0.125s linear, right 0.125s 0.175s ease-in;
    }
  }

  &.is-active {
    .hamburger-inner {
      transition-delay: 0s;
      transition-timing-function: ease-out;
      background-color: transparent !important;

      &::before {
        left: $hamburger-layer-width * -2;
        top: $hamburger-layer-width * -2;
        transform: translate3d(
            $hamburger-layer-width * 2,
            $hamburger-layer-width * 2,
            0
          )
          rotate(45deg);
        transition: left 0.125s ease-out, top 0.05s 0.125s linear,
          transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
      }

      &::after {
        right: $hamburger-layer-width * -2;
        top: $hamburger-layer-width * -2;
        transform: translate3d(
            $hamburger-layer-width * -2,
            $hamburger-layer-width * 2,
            0
          )
          rotate(-45deg);
        transition: right 0.125s ease-out, top 0.05s 0.125s linear,
          transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
      }
    }
  }
}

@keyframes blast-ripple {
  0% {
    top: calc(var(--loader-height, 100px) / 2 - var(--line-width, 4px));
    left: calc(var(--loader-width, 100px) / 2 - var(--line-width, 4px));
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: -1px;
    left: -1px;
    width: calc(var(--loader-width, 100px) - var(--line-width, 4px));
    height: calc(var(--loader-height, 100px) - var(--line-width, 4px));
    opacity: 0;
  }
}

.loader.blasting-ripple {
  position: relative;
  width: var(--loader-width, 100px);
  height: var(--loader-height, 100px);
}

.loader.blasting-ripple::after {
  opacity: 0;
  content: "";
  position: absolute;
  border: var(--line-width, 4px) solid var(--loader-color-primary, #fff);
  opacity: 1;
  border-radius: 50%;
  animation: blast-ripple var(--animation-duration, 2s)
    cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.loader.blasting-ripple::before {
  opacity: 0;
  top: calc(var(--loader-height, 100px) / 2 - var(--line-width, 4px));
  left: calc(var(--loader-width, 100px) / 2 - var(--line-width, 4px));
  content: "";
  position: absolute;
  border: var(--line-width, 4px) solid var(--loader-color-primary, #fff);
  opacity: 1;
  border-radius: 50%;
  animation: blast-ripple var(--animation-duration, 2s)
    cubic-bezier(0, 0.2, 0.8, 1) infinite;
  animation-delay: calc(var(--animation-duration, 2s) / 2);
}

.maps {
  display: inline-block;
  width: 26px;
  height: 26px;
  background-image: url(../GoogleMaps.svg);
  text-indent: -9999px;
  background-size: 26px 26px;
}

.wa {
  display: inline-block;
  width: 32px;
  height: 32px;
  background-image: url(../WhatsApp.svg);
  text-indent: -9999px;
  background-size: 32px 32px;
}

.fb {
  display: inline-block;
  width: 26px;
  height: 26px;
  background-image: url(../Facebook.svg);
  text-indent: -9999px;
  background-size: 26px 26px;
}

.insta {
  display: inline-block;
  width: 28px;
  height: 28px;
  background-image: url(../Instagram.svg);
  text-indent: -9999px;
  background-size: 28px 28px;
}

.admin-list {
  padding: 10px;

  .list-item {
    padding: 10px;
    display: flex;
    align-items: center;

    &:not(:last-child) {
      border-bottom: 1px solid #eee;
    }

    .button {
      margin-left: auto;
    }
  }
}

